# fastapi-template

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml
app/: main.py
app/controllers/: artifacts.py  users.py
app/core/: settings.py
app/dependencies/: auth.py
app/models/: artifacts.py  base.py  chat_sessions.py  messages.py  users.py
app/routers/: artifacts.py  auths.py  chat.py  chat_sessions.py  users.py
app/schemas/: artifacts.py  auths.py  chat_sessions.py  messages.py  users.py
app/static/: chat.html  chat_sessions.html  chat_sessions_backup.html
app/utils/: artifact_helpers.py  mongodb.py  object_storage.py  rabbitmq.py  repository.py  superuser.py
docs/: API_DOCUMENTATION.md  ARTIFACTS_IMPLEMENTATION_COMPLETE.md  ARTIFACTS_REFACTOR_SUMMARY.md  ARTIFACT_TREE_VIEW.md  CHAT_README.md  CHAT_SESSIONS_README.md  CODE_CONTEXT_FEATURE.md  CONTEXT_FEATURE_SUMMARY.md  FEATURE_README.md  FINAL_FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LOGIN_FIX.md  OBJECT_STORAGE.md  QUICK_START_GUIDE.md  README.md  REPOSITORY_STORAGE.md  SESSION_CREATION_FIX.md  UI_UPDATE_GUIDE.md  WEBSOCKET_FIX.md
tests/: README.md  test_context_feature.py  test_create_session.py  test_repository.py  test_sessions.sh  test_websocket.py
